raffia/tests/error/scss/at-rule/use/with-namespace-variable.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but `<ident>` received
  ┌─ with-namespace-variable.scss:1:20
  │
1 │ @use "other" with (a.$b: c);
  │                    ^


